Print Preview: Fixing destination list alignment
BUG=83414
TEST=See bug description.


Review URL: http://codereview.chromium.org/7277003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@90620 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 2d45d26c40cd1ac9ac62afc65f539594696a2676

--- a/chrome/browser/resources/print_preview/print_preview.css
+++ b/chrome/browser/resources/print_preview/print_preview.css
@@ -126,6 +126,10 @@ body header > h1 {
   position: relative;
 }
 
+#destination-option {
+  -webkit-line-box-contain: block;
+}
+
 p {
   -webkit-line-box-contain: block;
   margin: 0;
@@ -516,7 +520,6 @@ select {
   -webkit-box-shadow: inset 0 1px 2px white,
                       0 1px 2px rgba(0, 0, 0, .2);
   -webkit-appearance: none;
-  -webkit-margin-end: -2px;
   -webkit-padding-end: 20px;
   -webkit-padding-start: 14px;
   -webkit-user-select: none;
@@ -528,8 +531,6 @@ select {
   border: 1px solid #a0a0a0;
   font-size: 13px;
   font-weight: 400;
-  margin-bottom: 0;
-  margin-top: 0;
   outline: 0;
   padding-bottom: 3px;
   padding-top: 3px;
